# monogifplay

./: .gitignore  Makefile  Makefile.cross  Makefile.in  README.md  config.h.in  configure  configure.ac  monogifplay.c
